# palm-sync-daemon

./: .gitignore  LICENSE  Makefile.am  Makefile.in  README  aclocal.m4  autotools.sh  config.h.in  configure  configure.ac
doc/: bibliography.bib
docs/: palm-sync-daemon.1  technical_description.tex
docs/doxygen/: Doxyfile.in  Makefile.am  Makefile.in
docs/man/: Makefile.am  Makefile.in  palm-sync-daemon.1
docs/tex/: Makefile.am  Makefile.in  bibliography.bib  technical_description.tex
include/: helper.h  log.h  org_notes.h  palm.h  pdb.h  pdb_memos.h  sync.h  umash.h
scripts/: autotools.sh  opendocs.sh  static_analysis.sh  valgrind_check.sh
src/: Makefile.am  helper.c  log.c  log.h  main.c  palm-sync-daemon.c  palm.c  palm.h  sync.c  umash.c
src/include/: helper.h  log.h  org_notes.h  palm.h  pdb.h  pdb_memos.h  sync.h  umash_long.inc
src/include/pdb/: memos.h  pdb.h  tasks.h
src/orgmode/: org_notes.c
src/orgmode/parser/: orgmode_parser.h  parser.y  scanner.l
src/pdb/: memos.c  pdb.c  pdb_memos.c  tasks.c
tests/: Makefile.am  Makefile.in  helper_check_pdbs_test.c  helper_check_pdbs_test.sh  helper_hash_test  helper_hash_test.c  helper_hash_test.sh  helper_iconv_test.c  helper_iconv_test.sh  helper_save_pdbs_test.c  helper_save_pdbs_test.sh  log_test.c  log_test.sh  memos_data_edit_test  memos_data_edit_test.c  memos_data_edit_test.sh  memos_test  memos_test.c  memos_test.sh  org_notes_test.c  org_notes_test.sh  org_notes_write_test.c  org_notes_write_test.sh  palm_sync_daemon_test.sh  parser_test.c  parser_test.sh  pdb_categories_test.c  pdb_categories_test.sh  pdb_memos_data_edit_test.c  pdb_memos_data_edit_test.sh  pdb_memos_test  pdb_memos_test.c  pdb_memos_test.sh  pdb_record_test.c  pdb_record_test.sh  pdb_test.c  pdb_test.sh  tasks_data_edit_test.c  tasks_data_edit_test.sh  tasks_test.c  (+1 more)
